--- a/KinectDragDrop/packages.config
+++ b/KinectDragDrop/packages.config
@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Coding4Fun.Kinect.Wpf" version="1.5.0" />
+  <package id="Coding4Fun.Kinect.Wpf" version="1.7.0" targetFramework="net40-Client" />
 </packages>
